syntax = "proto3";

package ru.leti.wise.task.profile;

import "profile.proto";
import "google/protobuf/empty.proto";


service ProfileService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc GetAllProfiles(google.protobuf.Empty) returns (GetAllProfilesResponse);
}

message SignUpRequest {
  Profile profile = 1;
}

message SignUpResponse {
  string JWT = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string JWT = 1;
}

message GetAllProfilesResponse {
  repeated Profile profile = 1;
}